# VulkanGames2DBase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: CustomPD.cpp.4C576C8B0E635C9A.idx  CustomPD.h.FEFF2F0793A62F86.idx  CustomVkStructs.h.04AADF0D3E0907B5.idx  GameApp.cpp.0882213A6C95C9B1.idx  GameApp.h.222D354ACA627C4F.idx  GameWindow.cpp.5D8DCDFA9AD8B94C.idx  GameWindow.h.0DCE6C68F25FA670.idx  VkSetup.cpp.9A8D06EE8BDF0E4D.idx  VkSetup.h.65E865863013571E.idx  main.cpp.AAD33A06F5ABF6A8.idx  pch.h.A3F49596DFB66E89.idx
.zed/: debug.json  settings.json
assets/shaders/: shader.frag  shader.vert  slang.spv
include/: CommandBuffer.h  CustomIV.h  CustomLD.h  CustomPD.h  CustomSC.h  CustomSM.h  CustomSurface.h  CustomVertexBuffer.h  CustomVkStructs.h  FileUtility.h  GameApp.h  GameWindow.h  GraphicsPipeline.h  IndexBuffer.h  RenderBuffer.h  Renderer.h  Swapchain.h  VKCommandBuffer.h  VKRenderBuffer.h  VKVertexBuffer.h  VertexBuffer.h  VkSetup.h  VulkanInstance.h  VulkanLogicalDevice.h  VulkanPhysicalDevice.h  VulkanRenderer.h  VulkanShaderModule.h  VulkanSurface.h  VulkanSwapChain.h  pch.h  vkSetup.h  vksetup.h
shaders/: frag.shader  shader.slang  slang.spv  triangle.frag  triangle.frag.spv  triangle.vert  vert.shader
source/: CommandBuffer.cpp  CustomIV.cpp  CustomLD.cpp  CustomPD.cpp  CustomSC.cpp  CustomSM.cpp  CustomSurface.cpp  CustomVertexBuffer.cpp  FileUtility.cpp  GameApp.cpp  GameWindow.cpp  GraphicsPipeline.cpp  IndexBuffer.cpp  RenderBuffer.cpp  Renderer.cpp  Swapchain.cpp  VKCommandBuffer.cpp  VKRenderBuffer.cpp  VKVertexBuffer.cpp  VertexBuffer.cpp  VkSetup.cpp  VulkanInstance.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanRenderer.cpp  VulkanShaderModule.cpp  VulkanSurface.cpp  VulkanSwapChain.cpp  main.cpp  vkSetup.cpp  vksetup.cpp
